# paperless-cli

./: .gitignore  LICENSE  README.md  SKILL.md  implementation_plan.md  plan.md  pyproject.toml
benchmarks/: discovery_benchmark.py  ndjson_memory_check.py
docs/: command_cookbook.md  performance_benchmarks.md  release_checklist.md
docs/adr/: 0001-retrieval-and-cursor-decisions.md
rust/pcli_rust_norm/: Cargo.toml  pyproject.toml
rust/pcli_rust_norm/src/: lib.rs
src/pcli/: __init__.py
src/pcli/adapters/: __init__.py  auth.py  client.py  document_search.py  resource_handler.py  storage.py
src/pcli/cli/: auth.py  crud_resources.py  docs.py  install.py  io.py  main.py  readonly_resources.py  singleton_resources.py  tasks_resource.py
src/pcli/core/: __init__.py  cursor.py  errors.py  exit_codes.py  options.py  (+7 more)
tests/: test_auth_cli.py  test_cli_error_boundary.py  test_cli_smoke.py  test_client_factory.py  test_core_cursor.py  test_core_output.py  test_core_page_spec.py  test_core_parsing.py  test_core_retrieval_source.py  test_core_validation.py  test_core_whitespace.py  test_crud_resources_cli.py  test_discovery_model.py  test_docs_binary_cli.py  test_docs_facets_cli.py  test_docs_find_cli.py  test_docs_get_cli.py  test_docs_listing_cli.py  test_docs_misc_cli.py  test_docs_mutations_cli.py  test_docs_notes_cli.py  test_docs_peek_cli.py  test_docs_skim_cli.py  test_document_search_adapter.py  test_install_cli.py  test_readonly_resources_cli.py  test_resource_handler.py  test_runtime.py  test_singleton_resources_cli.py  test_storage.py  test_tasks_resource_cli.py
(+2 files in other folders)
