[project]
name = "pcli"
version = "0.1.0"
description = "Paperless CLI for LLM-friendly retrieval and management."
readme = "README.md"
authors = [
    { name = "Phillip Engel", email = "phillip@xrealm.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pypaperless>=5.2,<6.0",
    "typer>=0.12,<1.0",
]

[project.scripts]
pcli = "pcli.cli.main:main"

[dependency-groups]
dev = [
    "mypy>=1.11,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.6,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
